--- a/sites/all/themes/wttoc/sass/components/views/Views_All_BusinessesAndEvents.scss
+++ b/sites/all/themes/wttoc/sass/components/views/Views_All_BusinessesAndEvents.scss
@@ -554,7 +554,7 @@
  *  Form Stylings
  */ 
  
-.view-id-businesses_and_events.view-display-id-page_results,#block-views-d400f6dac6873ec2ddd895ba96987fce, 
+.view-id-businesses_and_events.view-display-id-page_results,.block--views.v_page_search_results-container,
 form#views-exposed-form-businesses-and-events-page-results, form#views-exposed-form-businesses-and-events-map-and-filters{
 	//PlaceHolder and Input Text
 	.SlectBox span.placeholder, input[type="text"],.SlectBox span{
