business and event - individual page sass

--- a/sites/all/themes/wttoc/sass/components/views/Views_One_BusinessesAndEvents.scss
+++ b/sites/all/themes/wttoc/sass/components/views/Views_One_BusinessesAndEvents.scss
@@ -19,6 +19,7 @@
 						height:400px;
 					}
 					height:auto;
+					max-width:none;
 					display:block;
 					@include centerXRelativeNoIE8;
 				}
