--- a/sites/all/themes/wttoc/css/wttoc.styles.css
+++ b/sites/all/themes/wttoc/css/wttoc.styles.css
@@ -2743,6 +2743,7 @@ body.page-search-businesses-and-events .l-region--sidebar-first .lc-region--inne
     .view-id-business_display.view-display-id-fg_image .view-content .views-row .views-field-field-image-gallery img,
     .view-id-events_display.view-display-id-e_image .view-content .views-row .views-field-field-image-gallery img {
       height: auto;
+      max-width: none;
       display: block;
       position: relative;
       left: 50%;
@@ -5504,3 +5505,5 @@ body.node-type-subscription .node__content input[type="submit"] {
   background-color: #66CD4C;
   border: 1px solid #66CD4C;
   max-width: 230px; }
+
+/*# sourceMappingURL=wttoc.styles.css.map */
