bugs on feb 10-2016

--- a/sites/all/themes/wttoc/css/wttoc.styles.css
+++ b/sites/all/themes/wttoc/css/wttoc.styles.css
@@ -1296,6 +1296,12 @@ ul {
 fieldset {
   clear: both; }
 
+/**
+ * OPT WRAP
+ */
+.optWrapper ul.options {
+  min-height: 150px; }
+
 /*
  * Back To Top Z Index
  */
