--- a/sites/all/themes/wttoc/sass/components/base_components/General_Elements.scss
+++ b/sites/all/themes/wttoc/sass/components/base_components/General_Elements.scss
@@ -57,6 +57,14 @@ fieldset{
 	@include clearboth;
 }
 
+/**
+ * OPT WRAP
+ */
+.optWrapper ul.options{
+	min-height:150px;
+}
+
+
 /*
  * Back To Top Z Index
  */
