--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -27,6 +27,7 @@
 @import "components/forms/Forms_contact-site-form";
 @import "components/forms/User_Forms";
 @import "components/store/Store_subscription";
+@import "components/store/siteseals";
 
 // Import variables, abstractions, base styles and components.
 // Uncomment the next lines and adjust them to your needs.
