--- a/sites/all/themes/wttoc/sass/components/views/Views_One_BasicPage.scss
+++ b/sites/all/themes/wttoc/sass/components/views/Views_One_BasicPage.scss
@@ -16,6 +16,9 @@ body.node-type-basic-page{
         margin-top:10px;
         margin-bottom:10px;
       }
+      a{
+        color:$color1;
+      }
     }
   }
   //PAGE TITLE
