--- a/sites/all/themes/wttoc/sass/components/views/Views_One_BlogNews.scss
+++ b/sites/all/themes/wttoc/sass/components/views/Views_One_BlogNews.scss
@@ -53,6 +53,9 @@ body.node-type-blog-post {
         margin-top:10px;
         margin-bottom:10px;
       }
+      a{
+        color: $color1;
+      }
     }
     //content:categories
     .views-field.views-field-field-post-categories{
